# NGAirQualityMeter

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  STM32L152RBTx_FLASH.ld  mastering.ioc
App/Inc/: app.hpp
App/Src/: app.cpp
Core/Inc/: main.h  stm32l1xx_hal_conf.h  stm32l1xx_it.h  usart.h
Core/Src/: gpio.c  main.c  stm32l1xx_hal_msp.c  stm32l1xx_it.c  usart.c
cmake/: app.cmake  gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
